src/objects/PromoCode__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Type of customer. Samples Independent bank transfer, Enterprise etc</description>
        <label>Account Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Type of business. Samples: Gastronomy, Hotel etc</description>
        <label>Business Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>The country wherefore this promo code is set.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_message_EN__c</fullName>
        <description>Message to the customer about the discount (English)</description>
        <label>Customer message (EN)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_message__c</fullName>
        <description>Message for the customer about the discount on his local language</description>
        <inlineHelpText>This information will be used from front-end to show the customer the information about the promo code on his local language</inlineHelpText>
        <label>Default Customer message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Free from field to describe the promo code and the use.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Shows the record ID as a unique identifier.</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine if the promo code is active. If it can be applied to customers.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked discount</label>
        <referenceTo>PromoCode__c</referenceTo>
        <relationshipLabel>Promo Codes</relationshipLabel>
        <relationshipName>Promo_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValidFrom__c</fullName>
        <description>Start date for adding this promo code.</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ValidTo__c</fullName>
        <description>End date for adding this promo code.</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Promo Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promo Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>